Oct 08, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- stub functions for savage

Oct 06, 2003: Jordi Mallach <jordi@sindominio.net>
- remove non-ASCII character from source, which broke gettext 0.12.
- update QuakeForge's HexenWorld port.
- update Catalan translation.

Oct 05, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add twilight to q1 and qw command suggestion
- add checkbox to be able to also filter countries without icon

Sep 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- load flag icons from /usr/(local/)share/flags/default
- scripts docs/copykdeflags and docs/convertmaxmindflags for copying kde or
  maxmind flags for use with xqf

Sep 12, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add ET protocol 83 for version 2.56

Aug 26, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix medal of honor to not check for q3a files (#795017)

Aug 21, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- replace strings by ints in country filter (Jochen Baier)
- add support for Medal of Honor

Aug 17, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- patch from Jochen Baier
  * icon for LAN servers
  * new GeoIP server filter GUI

Aug 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- detect cheating-death on halflife-servers
- set variable XQF_SERVER_ANTICHEAT before launching a game when the server
  requires some anti-cheat software
- split up stat_next() function to make it more readable

Aug 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- use getopt for command line parameters
- add --launch parameter, syntax subject to modification
- add gametypes and voteflags for Urban Terror 3

Aug 03, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix default ping value when reading server filters

Jul 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Support for America's Army. Thanks Florian Riepler for the patch.

Jul 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix default ET protocol, now 82. Thanks cjay for not reporting ;-)
