@@ -1,3 +1,6 @@
+Oct 11, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- rework qstat version parser to be able to deal with any amount of data
+
 Oct 08, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - stub functions for savage
 
